--- a/docker-compose-solarqube.yml
+++ b/docker-compose-solarqube.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   sonarqube:
+    container_name: sonarqube
     image: sonarqube:community
     volumes:
       - sonarqube_data:/opt/sonarqube/data
