--- a/docker-compose-mongodb.yml
+++ b/docker-compose-mongodb.yml
@@ -11,10 +11,10 @@ services:
     volumes:
       - mongo-data:/data/db
       - mongo-config-db:/data/configdb
-      
+
   mongo-express:
     image: mongo-express
-    container_name: mexpress
+    container_name: mongo-express
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=mongo_user
       - ME_CONFIG_MONGODB_ADMINPASSWORD=mongo_password
@@ -24,18 +24,8 @@ services:
     restart: unless-stopped
     ports:
       - "8081:8081"
-      
-  minio:
-    image: bitnami/minio:latest
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    volumes:
-      - 'minio_data:/data'
 
-       
 volumes:
-  minio-data:
   mongo-data:
   mongo-config-db:
-  
+
