--- a/docker-compose-solarqube.yml
+++ b/docker-compose-solarqube.yml
@@ -1,15 +1,36 @@
 version: "3"
 services:
   sonarqube:
-    container_name: sonarqube
     image: sonarqube:community
+    container_name: sonarqube
+    depends_on:
+      - postgresql
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://postgresql:5432/sonar
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
     volumes:
-      - sonarqube_data:/opt/sonarqube/data
-      - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube-data:/opt/sonarqube/data
+      - sonarqube-extensions:/opt/sonarqube/extensions
+      - sonarqube-logs:/opt/sonarqube/logs
     ports:
       - "9000:9000"
+      
+  postgresql:
+    image: postgres:latest
+    hostname: postgresql
+    container_name: postgresql
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+      POSTGRES_DB: sonar
+    volumes:
+      - postgresql:/var/lib/postgresql
+      - postgresql-data:/var/lib/postgresql/data
+
 volumes:
-  sonarqube_data:
-  sonarqube_extensions:
-  sonarqube_logs:
+  sonarqube-data:
+  sonarqube-extensions:
+  sonarqube-logs:
+  postgresql:
+  postgresql-data:
