--- a/docker-compose-keycloak.yml
+++ b/docker-compose-keycloak.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
 
@@ -10,9 +10,9 @@ services:
       POSTGRES_PASSWORD: admin-password
       POSTGRES_DB: bitnami_keycloak
     volumes:
-      - 'postgresql_data:/bitnami/postgresql'
-      - 'postgresql_preinitdb:/docker-entrypoint-preinitdb.d'
-      - 'postgresql_initdb:/docker-entrypoint-initdb.d'
+      - 'postgresql-data:/bitnami/postgresql'
+      - 'postgresql-preinitdb:/docker-entrypoint-preinitdb.d'
+      - 'postgresql-initdb:/docker-entrypoint-initdb.d'
 
   pgadmin:
     container_name: pg-admin
@@ -39,9 +39,9 @@ services:
       - KEYCLOAK_DATABASE_PASSWORD=admin-password
     depends_on:
       - postgresql
-      
+
 volumes:
-  postgresql_data:
-  postgresql_preinitdb:
-  postgresql_initdb:
+  postgresql-data:
+  postgresql-preinitdb:
+  postgresql-initdb:
   pgadmin:
