--- a/docker-compose-dynamodb.yml
+++ b/docker-compose-dynamodb.yml
@@ -1,23 +1,30 @@
 version: '3.7'
+
 services:
-  dynamo-db:
-    image:  amazon/dynamodb-local
-    container_name: dynamo-db
-    restart: always
+  dynamodb-local:
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data -cors *"
+    image: "amazon/dynamodb-local:latest"
+    container_name: dynamodb-local
+    user: root
+    working_dir: /home/dynamodblocal
+    ports:
+      - "8000:8000"
     volumes:
-      -  dynamodb_data:/home/dynamodblocal/data
+      - "dynamodb-data:/home/dynamodblocal/data"
+
+  dynamodb-admin:
+    container_name: dynamodb-admin
+    image: aaronshaf/dynamodb-admin
     ports:
-      - 8000:8000
-    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /home/dynamodblocal/data/"
-    
-  dynamodb-manager:
-    image:  taydy/dynamodb-manager
-    container_name: dynamodb-manager
-    restart: always
-    ports:
-      - 8080:80
-      
-      
+      - "8001:8001"
+    environment:
+      DYNAMO_ENDPOINT: "http://dynamodb-local:8000"
+      AWS_REGION: "us-west-2"
+      AWS_ACCESS_KEY_ID: local
+      AWS_SECRET_ACCESS_KEY: local
+    depends_on:
+      - dynamodb-local
+
 volumes:
-  dynamodb_data:
-  
+  dynamodb-data:
+
